more changes to Test classes to make code run in src folder